Amend batch-2 language eval: Haskell WASM 3->2, SML FFI 2->3
Two challenged scores re-researched. Both moved; Rust's 114 did not, and
no batch-1 number changed.

A1 -- Haskell WASM 3 -> 2 (94 -> 90). Re-researched against five specific
questions. The evidence moved it DOWN, on the embedding half I had
under-researched:
- A Hackage search for "wasmtime" returns zero packages. There is no
  wasmtime-hs and no successor. The options are extism/haskell-sdk (last
  commit 2024-12-03, ~20 months stale, 11 stars) and byteally/wasmedge
  (actively maintained, but 11 stars, over a different engine's C API).
  Batch 1 penalised Zig's WASM 3 for a "hand-managed C boundary" while Zig
  at least consumed wasmtime's own C API; Haskell is below that on the
  embedding half AND below it on the browser half.
- The size figure previously reported as missing, now measured: the live
  pandoc-wasm playground serves pandoc.wasm at content-length 52892061 --
  50.4 MiB. GHC issue #27338 "Make wasm modules smaller" is an open
  meta-issue. Go's browser target scored 2 for "multi-megabyte binaries".
- Two original claims were wrong in Haskell's FAVOUR and are corrected: TH
  and GHCi have worked since 9.10/9.12, and the single-threaded RTS still
  supports forkIO/MVar/threadDelay -- only parallelism is absent, which a
  CPU-bound single-shot browser validator does not need. Neither should
  have been counted against it.
- Bindist trajectory: the "tech preview, not in official bindists" sentence
  is identical from 9.6 (2023-03) to 9.15 (2026-03), and #22628 (static
  wasm bindists) closed in Jan 2023 with no successor. The backend is
  actively developed with no stabilisation date -- permanently in preview.

A2 -- SML FFI 2 -> 3 (88 -> 90). The original write-up posed a false
dichotomy (hand-computed offsets or a hand-written C shim) and missed the
third route: generate the layout from the pinned header at build time,
emitting target-language constants plus C-side static_asserts, so drift i